WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150655
we're incorrectly adjusting a stack location with respect to the localsOffset in FTLCompile
https://bugs.webkit.org/show_bug.cgi?id=150655
Summary
we're incorrectly adjusting a stack location with respect to the localsOffset...
Saam Barati
Reported
2015-10-28 18:42:56 PDT
we're recomputing this for a *OSRExitDescriptor* for every one of its *OSRExits*. This is having a multiplicative effect on offsets. I'm amazed this didn't break any of our tests. I think I introduced this in:
https://bugs.webkit.org/show_bug.cgi?id=149970
Attachments
patch
(2.55 KB, patch)
2015-10-28 19:12 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2015-10-28 19:12:06 PDT
Created
attachment 264287
[details]
patch
Filip Pizlo
Comment 2
2015-10-28 19:19:21 PDT
Nice catch!
Geoffrey Garen
Comment 3
2015-10-28 19:29:04 PDT
Comment on
attachment 264287
[details]
patch Can haz regression test?
Saam Barati
Comment 4
2015-10-28 22:20:21 PDT
(In reply to
comment #3
)
> Comment on
attachment 264287
[details]
> patch > > Can haz regression test?
I'll try to see if I can come up with one before landing this. We will definitely have one once FTL try/catch lands but it will be nice if I can come up with a small and simple reproducible program. This might be a bit tricky to get right. If I can't come up with a small program, I think coming up with a small program for FTL try/catch will be easier because of the nature of OSR exits from from calls and get/put_by_ids.
Saam Barati
Comment 5
2015-10-29 11:28:53 PDT
(In reply to
comment #4
)
> (In reply to
comment #3
) > > Comment on
attachment 264287
[details]
> > patch > > > > Can haz regression test? > I'll try to see if I can come up with one before landing this. > We will definitely have one once FTL try/catch lands but > it will be nice if I can come up with a small and simple > reproducible program. This might be a bit tricky > to get right. If I can't come up with a small program, > I think coming up with a small program for FTL try/catch > will be easier because of the nature of OSR exits from > from calls and get/put_by_ids.
I couldn't get a test case to reproduce this easily. I'm going to defer until FTL try/catch where we definitely will have a test case.
Geoffrey Garen
Comment 6
2015-10-29 11:35:40 PDT
Okeedokee.
WebKit Commit Bot
Comment 7
2015-10-29 12:15:37 PDT
Comment on
attachment 264287
[details]
patch Clearing flags on attachment: 264287 Committed
r191744
: <
http://trac.webkit.org/changeset/191744
>
WebKit Commit Bot
Comment 8
2015-10-29 12:15:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug