we're incorrectly adjusting a stack location with respect to the localsOffset in FTLCompile https://bugs.webkit.org/show_bug.cgi?id=150655

Reviewed by Filip Pizlo.

We're recomputing this value for an *OSRExitDescriptor* for every one
of its corresponding *OSRExits*. This is having a multiplicative
effect on offsets because each computation is relative to the previous
value. We must do this computation just once per OSRExitDescriptor.

* ftl/FTLCompile.cpp:
(JSC::FTL::mmAllocateDataSection):


Canonical link: https://commits.webkit.org/168848@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191744 268f45cc-cd09-0410-ab3c-d52691b4dbfc